add calculation of max power consumption to led confi

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -104,10 +104,10 @@
 		"conf_leds_optgroup_usb" : "USB",
 		"conf_leds_optgroup_debug" : "Debug",
 		"conf_leds_layout_btn_checklist" : "Zeige Checkliste",
-		"conf_leds_leyout_checkp1" : "Die schwarze eingefärbte LED ist die erste LED. Das ist der Punkt, an dem die Daten eingespeist werden.",
-		"conf_leds_leyout_checkp2" : "Das Layout ist die Ansicht vor dem Fernseher stehend, nicht dahinter.",
-		"conf_leds_leyout_checkp3" : "Stelle sicher, dass die Richtung richtig eingestellt ist, dazu ist die zweite und dritte LED grau markiert um den Datenfluss anzuzeigen.",
-		"conf_leds_leyout_checkp4" : "Vorgang Lücke: Solltest du eine Lücke benötigen, ignoriere diese bei der LED Angabe Oben/Unten/Rechts/Links und gebe anschließend unter Lückenlänge an, wieviel LEDs du abziehen möchtest. Verändere jetzt die Lückenposition, um die Lücke an die richtige Stelle zu rücken.",
+		"conf_leds_layout_checkp1" : "Die schwarze eingefärbte LED ist die erste LED. Das ist der Punkt, an dem die Daten eingespeist werden.",
+		"conf_leds_layout_checkp2" : "Das Layout ist die Ansicht vor dem Fernseher stehend, nicht dahinter.",
+		"conf_leds_layout_checkp3" : "Stelle sicher, dass die Richtung richtig eingestellt ist, dazu ist die zweite und dritte LED grau markiert um den Datenfluss anzuzeigen.",
+		"conf_leds_layout_checkp4" : "Vorgang Lücke: Solltest du eine Lücke benötigen, ignoriere diese bei der LED Angabe Oben/Unten/Rechts/Links und gebe anschließend unter Lückenlänge an, wieviel LEDs du abziehen möchtest. Verändere jetzt die Lückenposition, um die Lücke an die richtige Stelle zu rücken.",
 		"conf_leds_layout_frame" : "Klassisches Layout (Rahmen)",
 		"conf_leds_layout_matrix" : "Matrix Layout (LED Wand)",
 		"conf_leds_layout_generatedconf" : "Generierte/Aktuelle LED Konfiguration",
@@ -119,6 +119,7 @@
 		"conf_leds_layout_preview_originTEXT" : "Erstellt von: Textfeld",
 		"conf_leds_layout_preview_originMA" : "Erstellt von: Matrix Layout (LED Wand)",
 		"conf_leds_layout_preview_totalleds" : "LEDs gesamt: $1",
+		"conf_leds_layout_preview_ledpower" : "Max. Stromstärke: $1 A",
 		"conf_leds_layout_preview_l1" : "Das ist die erste LED (Einspeisung)",
 		"conf_leds_layout_preview_l2" : "Das visualisiert die Richtung des Datenstroms (zweite/dritte LED)",
 		"conf_leds_layout_cl_top" : "Oben",
