--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -104,10 +104,10 @@
 		"conf_leds_optgroup_usb" : "USB",
 		"conf_leds_optgroup_debug" : "Debug",
 		"conf_leds_layout_btn_checklist" : "Show checklist",
-		"conf_leds_leyout_checkp1" : "The black led is your first led, the first led is the point where you input your data signal.",
-		"conf_leds_leyout_checkp2" : "The layout is always the front view of your TV, never the back view.",
-		"conf_leds_leyout_checkp3" : "Make sure the direction is right. The grey leds indicate led number 2 and 3 to visualize the data direction.",
-		"conf_leds_leyout_checkp4" : "Case Gap: To create a gap, ignore it first when you define Top/Bottom/Left/Right and set afterwards your gap length to remove a amount of leds. Modify the gap position until it matches.",
+		"conf_leds_layout_checkp1" : "The black led is your first led, the first led is the point where you input your data signal.",
+		"conf_leds_layout_checkp2" : "The layout is always the front view of your TV, never the back view.",
+		"conf_leds_layout_checkp3" : "Make sure the direction is right. The grey leds indicate led number 2 and 3 to visualize the data direction.",
+		"conf_leds_layout_checkp4" : "Case Gap: To create a gap, ignore it first when you define Top/Bottom/Left/Right and set afterwards your gap length to remove a amount of leds. Modify the gap position until it matches.",
 		"conf_leds_layout_frame" : "Classic Layout (LED Frame)",
 		"conf_leds_layout_matrix" : "Matrix Layout (LED Wall)",
 		"conf_leds_layout_generatedconf" : "Generated/Current LED Configuration",
@@ -118,7 +118,8 @@
 		"conf_leds_layout_preview_originCL" : "Created from: Classic Layout (LED Frame)",
 		"conf_leds_layout_preview_originTEXT" : "Created from: Textfield",
 		"conf_leds_layout_preview_originMA" : "Created from: Matrix Layout(LED wall)",
-		"conf_leds_layout_preview_totalleds" : "Totel LEDs: $1",
+		"conf_leds_layout_preview_totalleds" : "Amount of LEDs: $1",
+		"conf_leds_layout_preview_ledpower" : "Max. power consumption: $1 A",
 		"conf_leds_layout_preview_l1" : "This is your first led (input position)",
 		"conf_leds_layout_preview_l2" : "This visualizes the data direction (second/third led)",
 		"conf_leds_layout_cl_top" : "Top",
