--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -468,6 +468,7 @@
 	"edt_conf_v4l2_cropTop_expl" : "Count of pixels on the top side that are removed from the picture.",
 	"edt_conf_v4l2_cropBottom_title" : "Crop bottom",
 	"edt_conf_v4l2_cropBottom_expl" : "Count of pixels on the bottom side that are removed from the picture.",
+	"edt_conf_v4l2_signalDetection_title" : "Enable signal detection",
 	"edt_conf_v4l2_redSignalThreshold_title" : "Red signal threshold",
 	"edt_conf_v4l2_redSignalThreshold_expl" : "Darkens low red values (recognized as black)",
 	"edt_conf_v4l2_greenSignalThreshold_title" : "Green signal threshold",
