--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -461,6 +461,7 @@
     "edt_conf_v4l2_cropTop_expl": "Cuenta de píxeles en la parte superior que se quitan de la imagen.",
     "edt_conf_v4l2_cropBottom_title": "Cortar abajo",
     "edt_conf_v4l2_cropBottom_expl": "Cuenta de píxeles en la parte inferior que se quitan de la imagen.",
+	"edt_conf_v4l2_signalDetection_title" : "Detección de señal",
     "edt_conf_v4l2_redSignalThreshold_title": "Umbral de señal rojo",
     "edt_conf_v4l2_redSignalThreshold_expl": "Oscurece los valores bajos de color rojo (reconocidos como negros)",
     "edt_conf_v4l2_greenSignalThreshold_title": "Umbral de señal verde",
