--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -37,6 +37,7 @@
 	"general_btn_on" : "On",
 	"general_btn_next" : "Next",
 	"general_btn_back" : "Back",
+	"general_btn_iswitch" : "Switch",
 	"dashboard_label_intro" : "The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.",
 	"dashboard_infobox_label_title" : "Information",
 	"dashboard_infobox_label_currenthyp" : "Your Hyperion version:",
@@ -88,7 +89,7 @@
 	"conf_helptable_expl" : "Explanation",
 	"conf_effect_path_intro" : "Define more effect paths if necessary.",
 	"conf_effect_fgeff_intro" : "Define a booteffect or color, which is shown during Hyperion startup for the defined duration.",
-	"conf_effect_bgeff_intro" : "Define a background effect, which us shown during \"idle\". (also temporarily via Kodi Watch)",
+	"conf_effect_bgeff_intro" : "Define a background effect/color, which is shown during Hyperion \"idle\". Sarts always with priority channel 255.",
 	"conf_leds_device_intro" : "Hyperion supports a lot of controllers to transmit data to your target device. Select a LED controller out of the sorted list and configure it. We have chosen the best default settings for each device.",
 	"conf_leds_layout_intro" : "You need also a led layout, which reflects your led positions. The classic layout is the usual used tv frame, but we also support led matrix (led walls) creation. The view on this layout is ALWAYS of the FRONT of your TV.",
 	"conf_leds_nav_label_ledcontroller" : "LED Controller",
@@ -187,6 +188,7 @@
 	"remote_input_status" : "Status/Action",
 	"remote_input_duration" : "Duration:",
 	"remote_input_ip" : "IP:",
+	"remote_input_clearall" : "Clear all Effects/Colors",
 	"remote_components_label" : "Components control",
 	"remote_components_intro" : "Enable and disable components of Hyperion during runtime. $1",
 	"remote_optgroup_usreffets" : "User Effects",
@@ -273,6 +275,8 @@
 	"infoDialog_import_comperror_text" : "Sad! Your browser doesn't support a import. Please try again with another browser.",
 	"infoDialog_import_confirm_title" : "Confirm import",
 	"infoDialog_import_confirm_text" : "Are you sure to import \"$1\"? This process can't be reverted!",
+	"InfoDialog_iswitch_title" : "Hyperion switcher",
+	"InfoDialog_iswitch_text" : "If you run Hyperion more than once in your local network, you could switch between the web configurations. Select the Hyperion instance below and switch!",
 	"wiz_rgb_title" : "RGB Byte Order Wizard",
 	"wiz_rgb_intro1" : "This wizard will guide you through the finding process of the correct color order for your leds. Click on continue to begin.",
 	"wiz_rgb_intro2" : "When do you need this wizard? Example: You set the color red, but you get green or blue. You could also use it for first configuration.",
