--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -47,6 +47,10 @@
 	"dashboard_infobox_label_ports" : "Ports (json|proto):",
 	"dashboard_infobox_message_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar! (V$1)",
 	"dashboard_infobox_message_updatesuccess" : "Du nutzt die aktuellste Version von Hyperion.",
+	"dashboard_infobox_label_statush" : "Hyperion Status:",
+	"dashboard_infobox_label_smartacc" : "Schnellzugriff",
+	"dashboard_infobox_label_enableh" : "Aktiviere Hyperion",
+	"dashboard_infobox_label_disableh" : "Deaktiviere Hyperion",
 	"dashboard_componentbox_label_title" : "Komponenten Status",
 	"dashboard_componentbox_label_comp" : "Komponente",
 	"dashboard_componentbox_label_status" : "Status",
