Hyperion Switcher + cleanup (#423)
* upd

* update

* update

* update schemachecker

* ...

* fix lowest priority

* zeroconf updates (#421) (#3)

* zeroconf:
add ip
make names more uniq

* tune dns name for webconfig

* update

* update

* update

* update ui

* ...

* min val for gamma

* lost somewhere this

* add status to hyperion object

* update ui

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -37,6 +37,7 @@
 	"general_btn_on" : "An",
 	"general_btn_next" : "Weiter",
 	"general_btn_back" : "Zurück",
+	"general_btn_iswitch" : "Switch",
 	"dashboard_label_intro" : "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponentenstatus sowie die letzten Blog-Posts vom Hyperion Team.",
 	"dashboard_infobox_label_title" : "Information",
 	"dashboard_infobox_label_currenthyp" : "Deine Hyperion Version:",
@@ -46,6 +47,10 @@
 	"dashboard_infobox_label_ports" : "Ports (json|proto):",
 	"dashboard_infobox_message_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar! (V$1)",
 	"dashboard_infobox_message_updatesuccess" : "Du nutzt die aktuellste Version von Hyperion.",
+	"dashboard_infobox_label_statush" : "Hyperion Status:",
+	"dashboard_infobox_label_smartacc" : "Schnellzugriff",
+	"dashboard_infobox_label_enableh" : "Aktiviere Hyperion",
+	"dashboard_infobox_label_disableh" : "Deaktiviere Hyperion",
 	"dashboard_componentbox_label_title" : "Komponenten Status",
 	"dashboard_componentbox_label_comp" : "Komponente",
 	"dashboard_componentbox_label_status" : "Status",
@@ -88,7 +93,7 @@
 	"conf_helptable_expl" : "Erklärung",
 	"conf_effect_path_intro" : "Definiere weitere Effekt-Pfade, wenn nötig.",
 	"conf_effect_fgeff_intro" : "Definiere einen Start Effekt/Farbe, dieser wird angezeigt, wenn Hyperion startet für die angegebene Dauer.",
-	"conf_effect_bgeff_intro" : "Definiere einen Hintergrund Effekt/Farbe, dieser wird aktiv, wenn Hyperion sich im Leerlauf befindet. (Das gilt ebenfalls für temporäres abschalten mithilfe der Kodi Überwachung).",
+	"conf_effect_bgeff_intro" : "Definiere einen Hintergrund Effekt/Farbe. Dieser wird aktiv, wenn Hyperion sich im Leerlauf befindet. Wird immer mit Priorität 255 gestartet.",
 	"conf_leds_device_intro" : "Wähle eine Methode zur Steuerung deiner LEDs aus, sie sind unterteilt in verschiedene Kategorien. Neben den allgemeinen Optionen die für alle gültig sind, gibt es auch spezfische die sich unterscheiden je nach Wahl.",
 	"conf_leds_layout_intro" : "Du benötigst ebenfalls ein LED Layout, welches deine LED-Positionen wiederspiegelt. Das klassische Layout wird für gewöhnlichen für TVs verwendet, Hyperion unterstützt aber auch LED Wände (Matrix). Die Ansicht des LAYOUTS ist die perspektive VOR dem Fernseher, nicht dahinter.",
 	"conf_leds_nav_label_ledcontroller" : "LED Steuerung",
@@ -187,6 +192,7 @@
 	"remote_input_status" : "Status/Aktion",
 	"remote_input_duration" : "Dauer:",
 	"remote_input_ip" : "IP:",
+	"remote_input_clearall" : "Lösche alle Effekte/Farben",
 	"remote_components_label" : "Komponentensteuerung",
 	"remote_components_intro" : "Starte und stoppe Komponenten von Hyperion. $1",
 	"remote_optgroup_usreffets" : "Benutzer Effekte",
@@ -273,6 +279,8 @@
 	"infoDialog_import_comperror_text" : "Dein Browser unterstützt leider keinen Import. Bitte versuche es mit einem anderen Browser erneut.",
 	"infoDialog_import_confirm_title" : "Bestätige Import",
 	"infoDialog_import_confirm_text" : "Bist du sicher, dass du die Konfigurations-Datei \"$1\" importieren möchtest? Diese Aktion kann nicht rückgängig gemacht werden!",
+	"InfoDialog_iswitch_title" : "Hyperion switcher",
+	"InfoDialog_iswitch_text" : "Sollte in deinem lokalen Netzwerk Hyperion mehr als einmal laufen, kannst du hier zwischen den Web Konfigurationen hin und her schalten. Wähle dazu die Instanz unten aus und switche!",
 	"wiz_rgb_title" : "RGB Byte Reihenfolge Assistent",
 	"wiz_rgb_intro1" : "Dieser Assisent wird dir dabei helfen die richtige Byte Reihenfolge für deine leds zu finden. Klicke auf Fortfahren um zu beginnen.",
 	"wiz_rgb_intro2" : "Wann benötigt man diesen Assistenten? Zur Erstkonfiguration oder wenn deine LEDs zb rot leuchten sollten, sie aber blau oder grün sind.",
