join strobe and fade effects new effect "breath"

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -602,7 +602,11 @@
 	"edt_eff_rotationtime_title" : "Rotationszeit",
 	"edt_eff_sleeptime_title" : "Schlafzeit",
 	"edt_eff_reversedirection_title" : "Richtung umkehren",
-	"edt_eff_fadetime_title" : "Übergangszeit",
+	"edt_eff_fadeintime_title" : "Zeit für Einblendung",
+	"edt_eff_fadeouttime_title" : "Zeit für Ausblendung",
+	"edt_eff_repeat_title" : "Wiederholung",
+	"edt_eff_colorendtime_title" : "Zeit für Start-Farbe",
+	"edt_eff_colorstarttime_title" : "Zeit für End-Farbe",
 	"edt_eff_colorstart_title" : "Farbe Start",
 	"edt_eff_colorend_title" : "Farbe Ende",
 	"edt_eff_colorshift_title" : "Farbverschiebung",
