--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -603,7 +603,11 @@
 	"edt_eff_rotationtime_title" : "Rotation time",
 	"edt_eff_sleeptime_title" : "Sleep time",
 	"edt_eff_reversedirection_title" : "Reverse direction",
-	"edt_eff_fadetime_title" : "Fade time",
+	"edt_eff_fadeintime_title" : "Fade in time",
+	"edt_eff_fadeouttime_title" : "Fade out time",
+	"edt_eff_repeat_title" : "Repeat",
+	"edt_eff_colorendtime_title" : "Time to hold start color",
+	"edt_eff_colorstarttime_title" : "Time to hold end color",
 	"edt_eff_colorstart_title" : "Color start",
 	"edt_eff_colorend_title" : "Color end",
 	"edt_eff_colorshift_title" : "Color Shift",
