--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -352,6 +352,7 @@
 	"edt_dev_spec_lightid_itemtitle" : "ID",
 	"edt_dev_spec_transistionTime_title" : "Übergangszeit",
 	"edt_dev_spec_switchOffOnBlack_title" : "Aus bei schwarz",
+	"edt_dev_spec_brightnessFactor_title" : "Helligkeitsfaktor",
 	"edt_dev_spec_uid_title" : "UID",
 	"edt_dev_spec_intervall_title" : "Intervall",
 	"edt_dev_spec_latchtime_title" : "Sperrzeit",
