--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -16,7 +16,7 @@
 	"general_comp_SMOOTHING" : "Smoothing",
 	"general_comp_BLACKBORDER" : "Blackbar Detection",
 	"general_comp_KODICHECKER" : "Kodi Watch",
-	"general_comp_FORWARDER" : "JSON/PROTO Forward",
+	"general_comp_FORWARDER" : "Forwarder",
 	"general_comp_UDPLISTENER" : "UDP Listener",
 	"general_comp_BOBLIGHTSERVER" : "Boblight Server",
 	"general_comp_GRABBER" : "Platform Capture",
@@ -38,6 +38,7 @@
 	"general_btn_next" : "Next",
 	"general_btn_back" : "Back",
 	"general_btn_iswitch" : "Switch",
+	"general_wiki_moreto" : "More informations to \"$1\" at our Wiki",
 	"dashboard_label_intro" : "The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.",
 	"dashboard_infobox_label_title" : "Information",
 	"dashboard_infobox_label_currenthyp" : "Your Hyperion version:",
@@ -58,7 +59,10 @@
     "dashboard_newsbox_visitblog" : "Visit Hyperion-Blog",
 	"dashboard_newsbox_noconn" : "Can't connect to Hyperion Server to retrieve latest posts, does your internet connection work?",
 	"dashboard_newsbox_readmore" : "Read more",
+	"dashboard_alert_message_confedit_t" : "Konfiguration geändert",
 	"dashboard_alert_message_confedit" : "Your Hyperion configuration has been modified. To apply it, restart Hyperion.",
+	"dashboard_alert_message_disabled_t" : "Hyperion disabled",
+	"dashboard_alert_message_disabled" : "Hyperion is currently disabled! To use it again, enable it at the dashboard.",
 	"main_menu_dashboard_token" : "Dashboard",
 	"main_menu_configuration_token" : "Configuration",
 	"main_menu_general_conf_token" : "General",
@@ -165,13 +169,16 @@
 	"conf_kodi_label_title" : "Kodi Watch",
 	"conf_kodi_intro" : "The Kodi Watcher enables you to enable and disable the screencapture depending on Kodi state. This is not limited to the same machine, you could observe also a Kodi on any other device at your network.",
 	"conf_logging_label_intro" : "Area to check log messages, depending on loglevel setting you see more or less information.",
-	"conf_logging_btn_pbupload" : "Create report for support request",
+	"conf_logging_btn_pbupload" : "Upload report for support request",
 	"conf_logging_btn_autoscroll" : "Auto scrolling",
 	"conf_logging_nomessage" : "No log messages available.",
 	"conf_logging_uploading" : "Prepare data...",
 	"conf_logging_yourlink" : "Link to your report",
 	"conf_logging_uplfailed" : "Upload failed! Please check your internet connection!",
+	"conf_logging_report" : "Report",
 	"conf_logging_lastreports" : "Previous reports",
+	"conf_logging_uplpolicy" : "By clicking this button you accept the",
+	"conf_logging_contpolicy" : "Report Privacy Policy",
 	"conf_webconfig_label_intro" : "Webconfiguration settings. Edit wisely.",
 	"remote_losthint" : "Note: All changes are lost after a restart.",
 	"remote_color_label" : "Colors/Effects",
@@ -180,7 +187,7 @@
 	"remote_color_label_color" : "Color:",
 	"remote_effects_label_effects" : "Effect:",
 	"remote_adjustment_label" : "Color adjustment",
-	"remote_adjustment_intro" : "Modifiy color/brightness/linearization during runtime. $1",
+	"remote_adjustment_intro" : "Modifiy color/brightness/compensation during runtime. $1",
 	"remote_input_label" : "Source Selection",
 	"remote_input_intro" : "Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own. $1",
 	"remote_input_label_autoselect" : "Auto Selection",
@@ -198,7 +205,7 @@
 	"remote_optgroup_usreffets" : "User Effects",
 	"remote_optgroup_syseffets" : "Provided Effects",
 	"remote_maptype_label" : "Mapping type",
-	"remote_maptype_intro" : "Change the mapping type during runtime. $1",
+	"remote_maptype_intro" : "Usually the led layout is responsible which led has a specific picture area, you could change it here. $1.",
 	"remote_maptype_label_multicolor_mean" : "Multicolor",
 	"remote_maptype_label_unicolor_mean" : "Unicolor",
 	"effectsconfigurator_label_intro" : "Create out of the base effects new effects that are tuned to your liking. Depending on Effect there are options like color, speed, direction and more available.",
@@ -281,6 +288,8 @@
 	"infoDialog_import_confirm_text" : "Are you sure to import \"$1\"? This process can't be reverted!",
 	"InfoDialog_iswitch_title" : "Hyperion switcher",
 	"InfoDialog_iswitch_text" : "If you run Hyperion more than once in your local network, you could switch between the web configurations. Select the Hyperion instance below and switch!",
+	"wiz_wizavail" : "Wizard available",
+	"wiz_guideyou" : "The $1 will guide you through the settings. Just press the button!",
 	"wiz_rgb_title" : "RGB Byte Order Wizard",
 	"wiz_rgb_intro1" : "This wizard will guide you through the finding process of the correct color order for your leds. Click on continue to begin.",
 	"wiz_rgb_intro2" : "When do you need this wizard? Example: You set the color red, but you get green or blue. You could also use it for first configuration.",
@@ -289,15 +298,24 @@
 	"wiz_rgb_q" : "Which color show your leds, when the color dot above shows...",
 	"wiz_rgb_qrend" : "...red?",
 	"wiz_rgb_qgend" : "...green?",
-	"wiz_hue_title" : "Hue Bridge Wizard",
-	"wiz_hue_intro1" : "With this Setup Helper you can get a new User for your Hue Bridge and you can see your Lights with the IDs for Hyperion Configuration.",
-	"wiz_hue_intro2" : "Remember: This is only a wizard. You have to copy and paste them in your config.",
+	"wiz_hue_title" : "Philips Hue Wizard",
+	"wiz_hue_intro1" : "This wizards configures Hyperion for the well known Philips Hue system. Features are Hue Bridge auto detection, user creation, set each hue light to a specific position on your picture or disable it and tune the Hyperion settings automatically! So in short: All you need are some clicks and you are done!",
+	"wiz_hue_desc1" : "It searches automatically for a hue bridge, in case it can't find one you need to provide the ip address and push the reload button on the right. Now you need a user id, if you don't have one create a new one.",
+	"wiz_hue_desc2" : "Now choose which lamps should be added. The position assigns the lamp to a specific position on your \"picture\". Disabled lamps won't be added. To identify single lamps press the button on the right.",
 	"wiz_hue_ip" : "Hue Bridge IP:",
-	"wiz_hue_username" : "Username:",
-	"wiz_hue_create_user" : "Create User",
-	"wiz_hue_failure_ip" : "Please check your IP Address.",
-	"wiz_hue_failure_connection" : "Connection Timeout. Please press the button in time.",
+	"wiz_hue_username" : "User ID:",
+	"wiz_hue_create_user" : "Create new User",
+	"wiz_hue_failure_ip" : "No Bridge found, please type in a valid ip",
+	"wiz_hue_failure_connection" : "Timeout: Please press the bridge button within the period 30 seconds",
+	"wiz_hue_failure_user" : "User not found, create a new one below or input a valid user id",
 	"wiz_hue_press_link" : "Please press link button on the Hue Bridge.",
+	"wiz_hue_ids_disabled" : "Deactivated",
+	"wiz_hue_ids_entire" : "Whole picture",
+	"wiz_hue_noids" : "This Hue bridge has no bulbs/stripes, please pair them before with the Hue Apps",
+	"wiz_hue_pos": "Position/State",
+	"wiz_hue_searchb": "Searching for bridge...",
+	"wiz_hue_blinkblue": "Let ID $1 light up blue",
+	"wiz_hue_ident" : "Identify",
 	"wiz_cc_title" : "Color calibration wizard",
 	"wiz_cc_intro1" : "This wizard will guide you through your led calibration. If you are using Kodi, the calibration pictures and videos can be send directly to kodi without further tasks on your side. If not, you need to download these files yourself and apply them, if the wizard wants it.",
 	"wiz_cc_kwebs" : "Kodi webserver (IP:Port)",
@@ -309,8 +327,8 @@
 	"wiz_cc_lettvshow" : "Let your TV show the following picture: $1",
 	"wiz_cc_lettvshowm" : "Check this with the following pictures: $1",
 	"wiz_cc_adjustit" : "Adjust your \"$1\", until your are fine with it. Take notice: The more you adjust away from the default value the color spectrum will be limited (Also for all colors in between). Depending on TV/LED color spectrum the results will vary.",
-	"wiz_cc_adjustgamma" : "Gamma: What you have to do is, adjust gamma levels of each channel until you have the same perceived amount of each channel. For example, if your Grey is a bit reddish it means that you have to increase red gamma to reduce the amount of red (the more gamma, the less amount of color).",
-	"wiz_cc_chooseid" : "Define a name for this profile.",
+	"wiz_cc_adjustgamma" : "Gamma: What you have to do is, adjust gamma levels of each channel until you have the same perceived amount of each channel. Hint: Neutral is 1.0! For example, if your Grey is a bit reddish it means that you have to increase red gamma to reduce the amount of red (the more gamma, the less amount of color).",
+	"wiz_cc_chooseid" : "Define a name for this color profile.",
 	"wiz_cc_btn_switchpic" : "Switch picture",
 	"wiz_cc_backlight" : "Additional you could define a backlight to sort out \"bad colors\" on nearly dark areas or if you don't like the switch between color and off during watching. Additional you could define if there should be some color in it or just white. This is disabled during the state \"Off\" ,\"Color\" and \"Effect\".",
 	"wiz_cc_testintro" : "Time for a real test!",
@@ -407,43 +425,43 @@
 	"edt_conf_color_heading_title" : "Color Calibration",
 	"edt_conf_color_channelAdjustment_header_itemtitle" : "Profile",
 	"edt_conf_color_channelAdjustment_header_title" : "Color channel adjustments",
-	"edt_conf_color_channelAdjustment_header_expl": "Adjustments for color, brightness, linearization and more.",
+	"edt_conf_color_channelAdjustment_header_expl": "Create color profiles that could be assigned to a specific component. Adjust color, gamma, brightness, compensation and more.",
 	"edt_conf_color_imageToLedMappingType_title" : "Led area assignment",
 	"edt_conf_color_imageToLedMappingType_expl" : "Overwrites the led area assignment of your led layout if it's not \"multicolor\"",
 	"edt_conf_color_id_title" : "ID",
 	"edt_conf_color_id_expl" : "User given name",
 	"edt_conf_color_leds_title" : "LED index",
 	"edt_conf_color_leds_expl" : "Assign this adjustment to all leds (*) or just some (0-24).",
-	"edt_conf_color_black_title" : "black",
+	"edt_conf_color_black_title" : "Black",
 	"edt_conf_color_black_expl" : "The calibrated black value.",
-	"edt_conf_color_white_title" : "white",
+	"edt_conf_color_white_title" : "White",
 	"edt_conf_color_white_expl" : "The calibrated white value.",
-	"edt_conf_color_red_title" : "red",
+	"edt_conf_color_red_title" : "Red",
 	"edt_conf_color_red_expl" : "The calibrated red value.",
-	"edt_conf_color_green_title" : "green",
+	"edt_conf_color_green_title" : "Green",
 	"edt_conf_color_green_expl" : "The calibrated green value.",
-	"edt_conf_color_blue_title" : "blue",
+	"edt_conf_color_blue_title" : "Blue",
 	"edt_conf_color_blue_expl" : "The calibrated blue value.",
-	"edt_conf_color_cyan_title" : "cyan",
+	"edt_conf_color_cyan_title" : "Cyan",
 	"edt_conf_color_cyan_expl" : "The calibrated cyan value.",
-	"edt_conf_color_magenta_title" : "magenta",
+	"edt_conf_color_magenta_title" : "Magenta",
 	"edt_conf_color_magenta_expl" : "The calibrated magenta value.",
-	"edt_conf_color_yellow_title" : "yellow",
+	"edt_conf_color_yellow_title" : "Yellow",
 	"edt_conf_color_yellow_expl" : "The calibrated yellow value.",
-	"edt_conf_color_gammaRed_title" : "gamma red",
-	"edt_conf_color_gammaRed_expl" : "The gamma of red.",
-	"edt_conf_color_gammaGreen_title" : "gamma green",
-	"edt_conf_color_gammaGreen_expl" : "The gamma of green.",
-	"edt_conf_color_gammaBlue_title" : "gamma blue",
-	"edt_conf_color_gammaBlue_expl" : "The gamma of blue.",
+	"edt_conf_color_gammaRed_title" : "Gamma red",
+	"edt_conf_color_gammaRed_expl" : "The gamma of red. 1.0 is neutral. Over 1.0 it reduces red, lower than 1.0 it adds red.",
+	"edt_conf_color_gammaGreen_title" : "Gamma green",
+	"edt_conf_color_gammaGreen_expl" : "The gamma of green. 1.0 is neutral. Over 1.0 it reduces green, lower than 1.0 it adds green.",
+	"edt_conf_color_gammaBlue_title" : "Gamma blue",
+	"edt_conf_color_gammaBlue_expl" : "The gamma of blue. 1.0 is neutral. Over 1.0 it reduces blue, lower than 1.0 it adds blue.",
 	"edt_conf_color_backlightThreshold_title" : "Backlight threshold",
 	"edt_conf_color_backlightThreshold_expl" : "The minimum amount of brightness (backlight). Disabled during effects, colors and in status \"Off\"",
 	"edt_conf_color_backlightColored_title" : "Colored backlight",
 	"edt_conf_color_backlightColored_expl" : "Add some color to your backlight.",
-	"edt_conf_color_brightness_title" : "brightness",
+	"edt_conf_color_brightness_title" : "Brightness",
 	"edt_conf_color_brightness_expl" : "set overall brightness of leds",
-	"edt_conf_color_brightnessComp_title" : "Brightness Compensation",
-	"edt_conf_color_brightnessComp_expl" : "compensates bightness differences between RGB, CMY and white. 100 means full compensation, 0 no compensation",
+	"edt_conf_color_brightnessComp_title" : "Brightness compensation",
+	"edt_conf_color_brightnessComp_expl" : "Compensates bightness differences between red green blue, cyan magenta yellow and white. 100 means full compensation, 0 no compensation",
 	"edt_conf_smooth_heading_title" : "Smoothing",
 	"edt_conf_smooth_type_title" : "Type",
 	"edt_conf_smooth_type_expl" : "Type of smoothing.",
@@ -590,7 +608,6 @@
 	"edt_eff_systemshutdown_header_title" : "System Shutdown",
 	"edt_eff_snake_header_title" : "Snake",
 	"edt_eff_sparks_header_title" : "Sparks",
-	"edt_eff_storbe_header_title" : "Strobe",
 	"edt_eff_traces_header_title" : "Color Traces",
 	"edt_eff_x-mas_header_title" : "X-Mas",
 	"edt_eff_trails_header_title" : "Trails",
@@ -609,10 +626,12 @@
 	"edt_eff_fadeintime_title" : "Fade in time",
 	"edt_eff_fadeouttime_title" : "Fade out time",
 	"edt_eff_repeat_title" : "Repeat",
+	"edt_eff_repeatcount_title" : "Repeat count",
 	"edt_eff_colorendtime_title" : "Time to hold start color",
 	"edt_eff_colorstarttime_title" : "Time to hold end color",
 	"edt_eff_colorstart_title" : "Color start",
 	"edt_eff_colorend_title" : "Color end",
+	"edt_eff_maintain_end_color_title" : "Keep endcolor",
 	"edt_eff_colorshift_title" : "Color Shift",
 	"edt_eff_whichleds_title" : "Which Leds",
 	"edt_eff_ledlist_title" : "Led List",
