--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -16,7 +16,7 @@
 	"general_comp_SMOOTHING" : "Glättung",
 	"general_comp_BLACKBORDER" : "Schwarze Balken Erkennung",
 	"general_comp_KODICHECKER" : "Kodi Überwachung",
-	"general_comp_FORWARDER" : "JSON/PROTO Weiterleitung",
+	"general_comp_FORWARDER" : "Weiterleitung",
 	"general_comp_UDPLISTENER" : "UDP Listener",
 	"general_comp_BOBLIGHTSERVER" : "Boblight Server",
 	"general_comp_GRABBER" : "Plattform Aufnahme",
@@ -38,6 +38,7 @@
 	"general_btn_next" : "Weiter",
 	"general_btn_back" : "Zurück",
 	"general_btn_iswitch" : "Switch",
+	"general_wiki_moreto" : "Mehr Informationen zu \"$1\" findest du in unserem Wiki",
 	"dashboard_label_intro" : "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponentenstatus sowie die letzten Blog-Posts vom Hyperion Team.",
 	"dashboard_infobox_label_title" : "Information",
 	"dashboard_infobox_label_currenthyp" : "Deine Hyperion Version:",
@@ -58,7 +59,10 @@
 	"dashboard_newsbox_visitblog" : "Besuche den Hyperion-Blog",
 	"dashboard_newsbox_noconn" : "Fehler bei dem Versuch die letzten Blog-Posts zu laden, funtkioniert dein Internet?",
 	"dashboard_newsbox_readmore" : "Weiterlesen",
+	"dashboard_alert_message_confedit_t" : "Konfiguration geändert",
 	"dashboard_alert_message_confedit" : "Deine Hyperion Konfiguration wurde verändert. Um die Änderungen anzuwenden, starte Hyperion neu.",
+	"dashboard_alert_message_disabled_t" : "Hyperion deaktiviert",
+	"dashboard_alert_message_disabled" : "Hyperion ist momentan deaktiviert! Um Hyperion zu nutzen, musst du es zuerst wieder im Dashboard aktivieren.",
 	"main_menu_dashboard_token" : "Dashboard",
 	"main_menu_configuration_token" : "Konfiguration",
 	"main_menu_general_conf_token" : "Allgemein",
@@ -154,7 +158,7 @@
 	"conf_leds_layout_textf1" : "Das Textfeld zeigt dir dein aktuell geladenes Layout, sofern du kein neues Layout mit den Optionen oben erstellt hast. Optional kann man die Werte hier weiter bearbeiten.",
 	"conf_grabber_fg_intro" : "Plattform Aufnahme ist das lokale System auf dem Hyperion installiert wurde, welches als Bildquelle dient.",
 	"conf_grabber_v4l_intro" : "USB Aufnahme ist ein Gerät, welches via USB angeschlossen ist und als Bildquelle dient.",
-	"conf_colors_color_intro" : "Erstelle Kalibrierungsprofile und passe Farben an, Helligkeit, Linearisierung und mehr.",
+	"conf_colors_color_intro" : "Erstelle Kalibrierungsprofile die einzelnen Komponenten zugewisen werden können. Passe dabei Farben, Gamma, Helligkeit, Kompensation und mehr an.",
 	"conf_colors_smoothing_intro" : "Glätte den Farbverlauf und Helligkeitsänderungen um nicht von schnellen Übergängen abgelenkt zu werden.",
 	"conf_colors_blackborder_intro" : "Ignoriere schwarze Balken, jeder Modus nutzt einen anderen Algorithmus um diese zu erkennen. Erhöhe die Schwelle, sollte es nicht funktionieren.",
 	"conf_network_json_intro" : "Der JSON-RPC-Port dieser Hyperion-Instanz, wird genutzt zur Fernsteuerung.",
@@ -165,13 +169,16 @@
 	"conf_kodi_label_title" : "Kodi Überwachung",
 	"conf_kodi_intro" : "Die Kodi Überwachung ermöglicht es dir abhängig vom Kodi Status dein ambient light an oder abzuschalten. Dies ist nicht limitiert auf das selbe Gerät. Du kannst jedes Kodi in deinem lokalen Netzwerk überwachen lassen.",
 	"conf_logging_label_intro" : "Überprüfe die Meldungen im Prokotoll um zu erfahren was Hyperion gerade beschäftigt. Je nach eingestellter Protokoll-Stufe siehst du mehr oder weniger Informationen.",
-	"conf_logging_btn_pbupload" : "Bericht für Supportanfrage erstellen",
+	"conf_logging_btn_pbupload" : "Bericht für Supportanfrage hochladen",
 	"conf_logging_btn_autoscroll" : "Automatisch scrollen",
 	"conf_logging_nomessage" : "Keine Einträge vorhanden.",
 	"conf_logging_uploading" : "Aufbereitung der Daten...",
 	"conf_logging_yourlink" : "Link zu deinem Bericht",
 	"conf_logging_uplfailed" : "Hochladen fehlgeschlagen! Überprüfe deine Internetverbindung!",
+	"conf_logging_report" : "Bericht",
 	"conf_logging_lastreports" : "Frühere Berichte",
+	"conf_logging_uplpolicy" : "Hiermit akzeptierst du die",
+	"conf_logging_contpolicy" : "Berichts-Datenschutzerklärung",
 	"conf_webconfig_label_intro" : "Einstellungen zur Webkonfiguration. Änderungen können die Erreichbarkeit des Webinterfaces beeinflussen.",
 	"remote_losthint" : "Notiz: Alle Änderungen gehen nach einem Neustart verloren.",
 	"remote_color_label" : "Farbe/Effekt",
@@ -180,7 +187,7 @@
 	"remote_color_label_color" : "Farbe:",
 	"remote_effects_label_effects" : "Effekt:",
 	"remote_adjustment_label" : "Farbanpassung",
-	"remote_adjustment_intro" : "Verändere live Farbe/Helligkeit/Linearisierung. $1",
+	"remote_adjustment_intro" : "Verändere live Farbe/Helligkeit/Kompensation. $1",
 	"remote_input_label" : "Quellenauswahl",
 	"remote_input_intro" : "Hyperion nutzt ein Prioritätensystem um die Quelle zu wählen. Alles was du setzt hat eine Priorität (Effekte/Farben/Plattform Aufnahme/USB Aufnahme und Netzwerkquellen). Standardmäßig nutzt Hyperion die Quelle mit der niedrigsten Priorität. Hier kannst du aktiv Einfluss darauf nehmen. $1",
 	"remote_input_label_autoselect" : "Automatische Auswahl",
@@ -198,7 +205,7 @@
 	"remote_optgroup_usreffets" : "Benutzer Effekte",
 	"remote_optgroup_syseffets" : "Mitgelieferte Effekte",
 	"remote_maptype_label" : "LED-Bereich Zuordnung",
-	"remote_maptype_intro" : "Wechsle zwischen verschiedenen Typen um die Auswirkungen besser vergleichen zu können. $1",
+	"remote_maptype_intro" : "Für gewöhnlich entscheidet dein LED Layout welchen Bildbereich welche LED bekommt, dies kann hier geändert werden. $1",
 	"remote_maptype_label_multicolor_mean" : "Mehrfarbig",
 	"remote_maptype_label_unicolor_mean" : "Einfarbig",
 	"effectsconfigurator_label_intro" : "Erstelle auf Grundlage der Basiseffekte neue Effekt die nach deinen Wünschen angepasst sind. Je nach Effekt stehen Optionen wie Farbe, Geschwindigkeit, oder Richtung und vieles mehr zur Auswahl.",
@@ -281,6 +288,8 @@
 	"infoDialog_import_confirm_text" : "Bist du sicher, dass du die Konfigurations-Datei \"$1\" importieren möchtest? Diese Aktion kann nicht rückgängig gemacht werden!",
 	"InfoDialog_iswitch_title" : "Hyperion switcher",
 	"InfoDialog_iswitch_text" : "Sollte in deinem lokalen Netzwerk Hyperion mehr als einmal laufen, kannst du hier zwischen den Web Konfigurationen hin und her schalten. Wähle dazu die Instanz unten aus und switche!",
+	"wiz_wizavail" : "Assistent verfügbar",
+	"wiz_guideyou" : "Der $1 wird dich durch die Konfiguration leiten, drücke dazu einfach den Button!",
 	"wiz_rgb_title" : "RGB Byte Reihenfolge Assistent",
 	"wiz_rgb_intro1" : "Dieser Assisent wird dir dabei helfen die richtige Byte Reihenfolge für deine leds zu finden. Klicke auf Fortfahren um zu beginnen.",
 	"wiz_rgb_intro2" : "Wann benötigt man diesen Assistenten? Zur Erstkonfiguration oder wenn deine LEDs zb rot leuchten sollten, sie aber blau oder grün sind.",
@@ -289,15 +298,24 @@
 	"wiz_rgb_q" : "Welche Farbe zeigen deine LEDs, wenn der Farbpunkt oben...",
 	"wiz_rgb_qrend" : "...rot ist?",
 	"wiz_rgb_qgend" : "...grün ist?",
-	"wiz_hue_title" : "Hue Bridge Assistent",
-	"wiz_hue_intro1" : "Mit diesem Setupassistenten kannst du einen neuen User auf der Hue Bridge anlegen und deine LightIDs für die Hyperion Konfiguration herausfinden.",
-	"wiz_hue_intro2" : "Beachte: Dies ist nur ein Assistent. Du musst die Daten in die Konfiguration kopieren.",
+	"wiz_hue_title" : "Philips Hue Assistent",
+	"wiz_hue_intro1" : "Dieser Assistent hilft dir bei der Konfiguration von Hyperion für Philips Hue. Zu den Funktionen zählen ein automatisches finden der Hue Bridge, einen neuen Benutzer erstellen, die einzelnen Lampen unterschiedlichen Bereichen im Bild zuzuordnen und weitere Einstellungen von Hyperion automatisch anzupassen. Kurz gesagt: Komplette Einrichtung mit ein paar Klicks.",
+	"wiz_hue_desc1" : "Es wird automatisch nach der Hue Bridge gesucht, solltest sie nicht gefunden werden, gebe die IP an und drücke den \"neu laden\" Button. Danach benötigst du eine gültige Benutzer ID, diese kann auch erstellt werden.",
+	"wiz_hue_desc2" : "Nun kannst du auswählen, welche der Lampen (IDs) hinzugefügt werden sollen. Mit der Position wählst du aus, wo die jeweilige Lampe \"im Bild\" sitzen soll. Deaktivierte Lampen werden nicht hinzugefügt. Als Hilfe zur Identifizierung kannst du sie mit einem Klick auf den rechten Button kurz aufleuchten lassen.",
 	"wiz_hue_ip" : "Hue Bridge IP:",
-	"wiz_hue_username" : "Benutzername:",
-	"wiz_hue_create_user" : "Benutzer anlegen",
-	"wiz_hue_failure_ip" : "Bitte überprüfe deine IP Adresse.",
-	"wiz_hue_failure_connection" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
+	"wiz_hue_username" : "Benutzer ID:",
+	"wiz_hue_create_user" : "Neuen Benutzer erstellen",
+	"wiz_hue_failure_ip" : "Keine Hue Bridge gefunden, bitte überprüfe die IP",
+	"wiz_hue_failure_connection" : "Zeitüberschreitung. Bitte drücke die Taste auf deiner Hue Bridge rechtzeitig",
+	"wiz_hue_failure_user" : "Benutzer ID wurde nicht gefunden, erstelle eine Neue oder gib eine bereits registrierte an.",
 	"wiz_hue_press_link" : "Bitte \"Link\" Taste auf der Hue Bridge drücken.",
+	"wiz_hue_ids_disabled" : "Deaktiviert",
+	"wiz_hue_ids_entire" : "Ganzes Bild",
+	"wiz_hue_noids" : "Diese Hue Bridge hat keine verbundenen Lampen, bitte verbinde diese zuerst mit deiner Hue Bridge (Nutze die Hue Apps dafür)",
+	"wiz_hue_pos": "Position/Status",
+	"wiz_hue_searchb": "Suche nach Hue Bridge...",
+	"wiz_hue_blinkblue": "Lasse ID $1 blau aufleuchten",
+	"wiz_hue_ident" : "Identifiziere",
 	"wiz_cc_title" : "Farbkalibrierungs Assistent",
 	"wiz_cc_intro1" : "Der Assistent wird dich durch die Kalibrierung deiner LEDs leiten. Sofern du Kodi nutzt, können die Bilder und Testvideos direkt an Kodi geschickt werden. Andernfalls musst du das Material selbst herunterladen und anwenden.",
 	"wiz_cc_kwebs" : "Kodi Webserver (IP:Port)",
@@ -309,8 +327,8 @@
 	"wiz_cc_lettvshow" : "Lass dabei deinen Fernseher folgendes Bild anzeigen: $1",
 	"wiz_cc_lettvshowm" : "Überprüfe dies mithilfe folgender Bildern: $1",
 	"wiz_cc_adjustit" : "Verändere dein \"$1\", bis du zufrieden bist. Beachte: Je mehr du reduzierst bzw von dem Standardwert abweichst, je mehr veränderst du den maximalen Farbraum, was alle Farben die daraus abgeleitet werden ebenfalls betrifft. Je nach TV/LED Farbspektrum sind die Ergebnisse unterschiedlich.",
-	"wiz_cc_adjustgamma" : "Gamma: Was du jetzt tun musst ist, jeden Gamma-Kanal so einstellen, dass der \"Grauverlauf\" auf den LEDs nicht grünlich/rötlich/bläulich aussieht. Beispiel: Sollte dein grau etwas rötlich sein bedeutet dies, dass du dein Gamma für Rot erhöhen musst um den Rot-Anteil zu verringern (Je mehr Gamma, desto weniger Farbe).",
-	"wiz_cc_chooseid" : "Wähle einen Namen für dieses Profil.",
+	"wiz_cc_adjustgamma" : "Gamma: Was du jetzt tun musst ist, jeden Gamma-Kanal so einstellen, dass der \"Grauverlauf\" auf den LEDs nicht grünlich/rötlich/bläulich aussieht. Neutral ist übrigens 1.0. Beispiel: Sollte dein grau etwas rötlich sein bedeutet dies, dass du dein Gamma für Rot erhöhen musst um den Rot-Anteil zu verringern (Je mehr Gamma, desto weniger Farbe).",
+	"wiz_cc_chooseid" : "Wähle einen Namen für dieses Farb-Profil.",
 	"wiz_cc_btn_switchpic" : "Testbild ändern",
 	"wiz_cc_backlight" : "Zusätzlich kannst du eine Hintergrundbeluchtung einstellen, um \"irritierende Farben\" bei fast schwarzem Bild zu vermeiden oder du den Wechsel zwischen Farbe und Aus als zu anstrengend empfindest. Zusätzlich kann bestimmt werden, ob diese farbig oder nur weiß sein soll. Wird automatisch deaktiviert im Zustand \"Aus\" sowie bei \"Farbe\" und \"Effekt\".",
 	"wiz_cc_testintro" : "Nun ist es an der Zeit für einen Testlauf.",
@@ -429,20 +447,20 @@
 	"edt_conf_color_magenta_expl" : "Kalibrierter Magentawert.",
 	"edt_conf_color_yellow_title" : "Gelb",
 	"edt_conf_color_yellow_expl" : "Kalibrierter Gelbwert.",
-	"edt_conf_color_gammaRed_title" : "Gamma rot",
-	"edt_conf_color_gammaRed_expl" : "Gamma von rot.",
-	"edt_conf_color_gammaGreen_title" : "Gamma grün",
-	"edt_conf_color_gammaGreen_expl" : "Gamma von grün.",
-	"edt_conf_color_gammaBlue_title" : "Gamma blau",
-	"edt_conf_color_gammaBlue_expl" : "Gamma von blau",
+	"edt_conf_color_gammaRed_title" : "Gamma Rot",
+	"edt_conf_color_gammaRed_expl" : "Gamma von rot. 1.0 ist neutral. Über 1.0 wird rot reduziert, unter 1.0 wird rot erhöht.",
+	"edt_conf_color_gammaGreen_title" : "Gamma Grün",
+	"edt_conf_color_gammaGreen_expl" : "Gamma von grün. 1.0 ist neutral. Über 1.0 wird grün reduziert, unter 1.0 wird grün erhöht.",
+	"edt_conf_color_gammaBlue_title" : "Gamma Blau",
+	"edt_conf_color_gammaBlue_expl" : "Gamma von blau. 1.0 ist neutral. Über 1.0 wird blau reduziert, unter 1.0 wird blau erhöht.",
 	"edt_conf_color_backlightThreshold_title" : "Hintergrund - beleuchtung",
 	"edt_conf_color_backlightThreshold_expl" : "Eine Beleuchtung die dauerhaft aktiv ist. (Automatisch deaktiviert bei Effekten, Farben oder im Zustand \"Aus\")",
 	"edt_conf_color_backlightColored_title" : "Farbige Hintergrund - beleuchtung",
 	"edt_conf_color_backlightColored_expl" : "Die Hintergrundbeleuchtung kann mit oder ohne Farbanteile genutzt werden.",
 	"edt_conf_color_brightness_title" : "Helligkeit",
-	"edt_conf_color_brightness_expl" : "die desamt Helligkeit",
+	"edt_conf_color_brightness_expl" : "Die gesamte Helligkeit",
 	"edt_conf_color_brightnessComp_title" : "Helligkeits Kompensation",
-	"edt_conf_color_brightnessComp_expl" : "Kompensiert unterschiede in der Helligkeit zwischen RGB, CMY und weiß. 100 ist volle Kompensation, 0 keine Kompensation",
+	"edt_conf_color_brightnessComp_expl" : "Kompensiert unterschiede in der Helligkeit zwischen Rot Grün Blau, Cyan Magenta Gelb und weiß. 100 ist volle Kompensation, 0 keine Kompensation",
 	"edt_conf_smooth_heading_title" : "Glättung",
 	"edt_conf_smooth_type_title" : "Art",
 	"edt_conf_smooth_type_expl" : "Algorithmus der Glättung.",
@@ -589,7 +607,6 @@
 	"edt_eff_systemshutdown_header_title" : "Herunterfahren",
 	"edt_eff_snake_header_title" : "Schlange",
 	"edt_eff_sparks_header_title" : "Funken",
-	"edt_eff_storbe_header_title" : "Stroboskop",
 	"edt_eff_traces_header_title" : "Farbspuren",
 	"edt_eff_x-mas_header_title" : "Weihnachten",
 	"edt_eff_trails_header_title" : "Spuren",
@@ -612,6 +629,8 @@
 	"edt_eff_colorstarttime_title" : "Zeit für End-Farbe",
 	"edt_eff_colorstart_title" : "Farbe Start",
 	"edt_eff_colorend_title" : "Farbe Ende",
+	"edt_eff_repeatcount_title" : "Anzahl Wiederholung",
+	"edt_eff_maintain_end_color_title" : "Behalte Endfarbe",
 	"edt_eff_colorshift_title" : "Farbverschiebung",
 	"edt_eff_whichleds_title" : "Welche LEDs",
 	"edt_eff_ledlist_title" : "LED Liste",
@@ -672,7 +691,7 @@
 	"edt_msg_error_minimum_excl" : "Der Wert muss größer als $1 sein",
 	"edt_msg_error_minimum_incl" : "Der Wert muss mindestens $1 sein",
 	"edt_msg_error_maxLength" : "Die Eingabe darf höchstens $1 Zeichen lang sein",
-	"edt_msg_error_minLength" : "Die Eingabe muss mindestens $ Zeichen lang sein",
+	"edt_msg_error_minLength" : "Die Eingabe muss mindestens $1 Zeichen lang sein",
 	"edt_msg_error_pattern" : "Die Eingabe muss dem gegebenen Muster entsprechen",
 	"edt_msg_error_additionalItems" : "In diesem Feld sind keine weiteren Elemente erlaubt",
 	"edt_msg_error_maxItems" : "Das Feld darf höchstens $1 Element(e) beinhalten",
