--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -597,8 +597,7 @@
 	"edt_eff_fade_header_title" : "Farbübergang",
 	"edt_eff_rainbowmood_header_title" : "Regenbogen",
 	"edt_eff_knightrider_header_title" : "Knight Rider",
-	"edt_eff_lightclock_header_title" : "Uhr 1",
-	"edt_eff_clock_header_title" : "Uhr 2",
+	"edt_eff_lightclock_header_title" : "Lichtuhr",
 	"edt_eff_pacman_header_title" : "Pac-Man",
 	"edt_eff_moodblobs_header_title" : "Stimmungskugeln",
 	"edt_eff_rainbowswirl_header_title" : "Regenbogenwirbel",
@@ -661,11 +660,9 @@
 	"edt_eff_colorHour_title" : "Farbe Stunde",
 	"edt_eff_colorMinute_title" : "Farbe Minute",
 	"edt_eff_colorSecond_title" : "Farbe Sekunde",
-	"edt_eff_hourMargin_title" : "Länge Stunde",
-	"edt_eff_minuteMargin_title" : "Länge Minute",
-	"edt_eff_secondMargin_title" : "Länge Sekunde",
-	"edt_eff_margin_title" : "Abstand",
-	"edt_eff_colorMarker_title" : "Farbe Markierung",
+	"edt_eff_colorMarker_title" : "Markierung Farbe",
+	"edt_eff_markerDepth_title" : "Marker",
+	"edt_eff_backgroundColor_title" : "Hintergrundfarbe",
 	"edt_append_ns" : "ns",
 	"edt_append_ms" : "ms",
 	"edt_append_s" : "s",
