--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -59,7 +59,7 @@
     "dashboard_newsbox_visitblog" : "Visit Hyperion-Blog",
 	"dashboard_newsbox_noconn" : "Can't connect to Hyperion Server to retrieve latest posts, does your internet connection work?",
 	"dashboard_newsbox_readmore" : "Read more",
-	"dashboard_alert_message_confedit_t" : "Configuration modified",
+	"dashboard_alert_message_confedit_t" : "Konfiguration geändert",
 	"dashboard_alert_message_confedit" : "Your Hyperion configuration has been modified. To apply it, restart Hyperion.",
 	"dashboard_alert_message_disabled_t" : "Hyperion disabled",
 	"dashboard_alert_message_disabled" : "Hyperion is currently disabled! To use it again, enable it at the dashboard.",
@@ -598,8 +598,7 @@
 	"edt_eff_fade_header_title" : "Fade",
 	"edt_eff_rainbowmood_header_title" : "Rainbow Mood",
 	"edt_eff_knightrider_header_title" : "Knight Rider",
-	"edt_eff_lightclock_header_title" : "Clock 1",
-	"edt_eff_clock_header_title" : "Clock 2",
+	"edt_eff_lightclock_header_title" : "Light Clock",
 	"edt_eff_pacman_header_title" : "Pac-Man",
 	"edt_eff_moodblobs_header_title" : "Mood Blobs",
 	"edt_eff_rainbowswirl_header_title" : "Rainbow Swirl",
@@ -662,11 +661,10 @@
 	"edt_eff_colorHour_title" : "Color hour",
 	"edt_eff_colorMinute_title" : "Color minute",
 	"edt_eff_colorSecond_title" : "Color second",
-	"edt_eff_hourMargin_title" : "Margin hour",
-	"edt_eff_minuteMargin_title" : "Margin minute",
-	"edt_eff_secondMargin_title" : "Margin second",
-	"edt_eff_margin_title" : "Margin",
-	"edt_eff_colorMarker_title" : "Color marker",
+	"edt_eff_colorMarker_title" : "Marker color",
+	"edt_eff_markerWidth_title" : "Marker width",
+	"edt_eff_markerDepth_title" : "Marker depth",
+	"edt_eff_backgroundColor_title" : "Background Color",
 	"edt_append_ns" : "ns",
 	"edt_append_ms" : "ms",
 	"edt_append_s" : "s",
