Update es.json (POEditor.com)

--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -267,7 +267,6 @@
     "wiz_rgb_qgend": "...verde?",
     "wiz_hue_title": "Asistente Puente de Matiz",
     "wiz_hue_intro1": "Con este ayudante de configuración puedes obtener un nuevo usuario para tu Puente de Matiz y puedes ver tus luces con las ID para la Configuración de Hyperion.",
-    "wiz_hue_intro2": "Recuerda: esto es sólo un asistente. Tienes que copiar y pegarlos en tu config.",
     "wiz_hue_ip": "IP Puente de Matiz:",
     "wiz_hue_username": "Nombre de usuario:",
     "wiz_hue_create_user": "Crear Usuario",
@@ -555,7 +554,6 @@
     "edt_eff_systemshutdown_header_title": "Apagado del Sistema",
     "edt_eff_snake_header_title": "Serpiente",
     "edt_eff_sparks_header_title": "Chispas",
-    "edt_eff_storbe_header_title": "Estroboscópico",
     "edt_eff_traces_header_title": "Rastros de Color",
     "edt_eff_x-mas_header_title": "Navidad",
     "edt_eff_trails_header_title": "Caminos",
@@ -694,5 +692,26 @@
     "edt_eff_colorstarttime_title": "Tiempo para mantener el color de fin",
     "edt_dev_spec_brightnessFactor_title": "Factor de brillo",
     "edt_conf_color_brightnessComp_title": "Compensación de brillo",
-    "edt_conf_color_brightnessComp_expl": "Compensa las diferencias de brillo entre RGB, CMY y blanco. 100 significa compensación completa, 0 sin compensación"
+    "edt_conf_color_brightnessComp_expl": "Compensa las diferencias de brillo entre RGB, CMY y blanco. 100 significa compensación completa, 0 sin compensación",
+    "general_wiki_moreto": "Más información sobre \"$1\" en nuestra Wiki",
+    "dashboard_alert_message_confedit_t": "Configuración modificada",
+    "dashboard_alert_message_disabled_t": "Hyperion deshabilitado",
+    "dashboard_alert_message_disabled": "¡Hyperion está actualmente deshabilitado! Para usarlo de nuevo, habilitalo en el panel de mandos.",
+    "conf_logging_report": "Informe",
+    "conf_logging_uplpolicy": "Haciendo click en éste botón aceptas la",
+    "conf_logging_contpolicy": "Informe de la Política de Privacidad",
+    "wiz_wizavail": "Asistente disponible",
+    "wiz_guideyou": "El $1 te guiará a través de los ajustes. Simplemente ¡presiona el botón!",
+    "wiz_hue_desc1": "Busca automáticamente un puente Hue, en caso de que no encuentre uno necesitas proporcionar la dirección IP y pulsar el botón de recarga a la derecha. Ahora necesitas una identificación de usuario, si no tienes una, crea una nueva.",
+    "wiz_hue_desc2": "Ahora elije qué lámparas se deben agregar. La posición asigna la lámpara a una posición específica en tu \"imagen\". No se agregarán las lámparas deshabilitadas. Para identificar lámparas individuales, presiona el botón de la derecha.",
+    "wiz_hue_failure_user": "Usuario no encontrado, crea uno nuevo debajo o introduce un ID de usuario válido",
+    "wiz_hue_ids_disabled": "Desactivado",
+    "wiz_hue_ids_entire": "Imagen completa",
+    "wiz_hue_noids": "Este puente de Matiz no tiene bombillas/tiras, por favor, emparéjalos antes con las aplicaciones de Hue",
+    "wiz_hue_pos": "Posición/Estado",
+    "wiz_hue_searchb": "Buscando el puente...",
+    "wiz_hue_blinkblue": "Permite a ID $1 encender el azul",
+    "wiz_hue_ident": "Identificar",
+    "edt_eff_repeatcount_title": "Repetir cuenta",
+    "edt_eff_maintain_end_color_title": "Mantener color de fin"
 }
