--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -390,6 +390,7 @@
 	"edt_dev_spec_gpioBcm_title" : "GPIO Pin",
 	"edt_dev_spec_ledIndex_title" : "LED index",
 	"edt_dev_spec_colorComponent_title" : "Farbkomponente",
+	"edt_dev_spec_ledType_title" : "LED typ",
 	"edt_conf_general_enable_title" : "Aktiviert",
 	"edt_conf_general_enable_expl" : "Wenn aktiviert, ist die Komponente aktiv.",
 	"edt_conf_general_priority_title" : "Priorität",
