--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -387,6 +387,7 @@
 	"edt_dev_spec_useRgbwProtocol_title" : "Use RGBW protocol",
 	"edt_dev_spec_maximumLedCount_title" : "Maximum LED count",
 	"edt_dev_spec_gpioNumber_title" : "GPIO number",
+	"edt_dev_spec_dmaNumber_title" : "DMA channel",
 	"edt_dev_spec_gpioMap_title" : "GPIO mapping",
 	"edt_dev_spec_PBFiFo_title" : "Pi-Blaster FiFo",
 	"edt_dev_spec_gpioBcm_title" : "GPIO Pin",
