--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -342,6 +342,7 @@
     "edt_dev_spec_useRgbwProtocol_title": "Utilizar el protocolo RGBW",
     "edt_dev_spec_maximumLedCount_title": "Número máximo de LEDs",
     "edt_dev_spec_gpioNumber_title": "Número GPIO",
+    "edt_dev_spec_dmaNumber_title" : "Canal DMA",
     "edt_dev_spec_gpioMap_title": "Mapeo GPIO",
     "edt_dev_spec_PBFiFo_title": "Pi-Blaster FiFo",
     "edt_dev_spec_gpioBcm_title": "Pin GPIO",
