--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -342,13 +342,11 @@
     "edt_dev_spec_useRgbwProtocol_title": "Utilizar el protocolo RGBW",
     "edt_dev_spec_maximumLedCount_title": "Número máximo de LEDs",
     "edt_dev_spec_gpioNumber_title": "Número GPIO",
-    "edt_dev_spec_dmaNumber_title" : "Canal DMA",
     "edt_dev_spec_gpioMap_title": "Mapeo GPIO",
     "edt_dev_spec_PBFiFo_title": "Pi-Blaster FiFo",
     "edt_dev_spec_gpioBcm_title": "Pin GPIO",
     "edt_dev_spec_ledIndex_title": "Índice LED",
     "edt_dev_spec_colorComponent_title": "Componente de color",
-    "edt_dev_spec_ledType_title": "Tipo de LED",
     "edt_conf_general_enable_title": "Activar",
     "edt_conf_general_enable_expl": "Si está marcada, el componente está habilitado",
     "edt_conf_general_priority_title": "Canal prioritario",
@@ -715,5 +713,7 @@
     "wiz_hue_blinkblue": "Permite a ID $1 encender el azul",
     "wiz_hue_ident": "Identificar",
     "edt_eff_repeatcount_title": "Repetir cuenta",
-    "edt_eff_maintain_end_color_title": "Mantener color de fin"
+    "edt_eff_maintain_end_color_title": "Mantener color de fin",
+    "edt_dev_spec_ledType_title": "Tipo de LED",
+    "edt_dev_spec_dmaNumber_title": "Canal DMA"
 }
