--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -342,13 +342,11 @@
     "edt_dev_spec_useRgbwProtocol_title": "Utilizar el protocolo RGBW",
     "edt_dev_spec_maximumLedCount_title": "Número máximo de LEDs",
     "edt_dev_spec_gpioNumber_title": "Número GPIO",
-    "edt_dev_spec_dmaNumber_title" : "Canal DMA",
     "edt_dev_spec_gpioMap_title": "Mapeo GPIO",
     "edt_dev_spec_PBFiFo_title": "Pi-Blaster FiFo",
     "edt_dev_spec_gpioBcm_title": "Pin GPIO",
     "edt_dev_spec_ledIndex_title": "Índice LED",
     "edt_dev_spec_colorComponent_title": "Componente de color",
-    "edt_dev_spec_ledType_title": "Tipo de LED",
     "edt_conf_general_enable_title": "Activar",
     "edt_conf_general_enable_expl": "Si está marcada, el componente está habilitado",
     "edt_conf_general_priority_title": "Canal prioritario",
@@ -541,73 +539,72 @@
     "edt_conf_log_heading_title": "Registrando",
     "edt_conf_log_level_title": "Nivel de registro",
     "edt_conf_log_level_expl": "Dependiendo del nivel de registro verás menos o más mensajes en tu registro.",
-    "edt_eff_candle_header_title": "Vela",
-    "edt_eff_police_header_title": "Policía",
-    "edt_eff_fade_header_title": "Fundido",
-    "edt_eff_rainbowmood_header_title": "Ánimo Arcoiris",
-    "edt_eff_knightrider_header_title": "Coche Fantástico",
-    "edt_eff_lightclock_header_title": "Reloj 1",
-    "edt_eff_clock_header_title": "Reloj 2",
-    "edt_eff_pacman_header_title": "Come-Cocos",
-    "edt_eff_moodblobs_header_title": "Ánimo Gotas",
-    "edt_eff_rainbowswirl_header_title": "Remolino Arcoiris",
-    "edt_eff_random_header_title": "Aleatorio",
-    "edt_eff_runningdots_header_title": "Puntos Corriendo",
-    "edt_eff_systemshutdown_header_title": "Apagado del Sistema",
-    "edt_eff_snake_header_title": "Serpiente",
-    "edt_eff_sparks_header_title": "Chispas",
-    "edt_eff_traces_header_title": "Rastros de Color",
-    "edt_eff_x-mas_header_title": "Navidad",
-    "edt_eff_trails_header_title": "Caminos",
+    "edt_eff_candle_header": "Vela",
+    "edt_eff_police_header": "Policía",
+    "edt_eff_fade_header": "Fundido",
+    "edt_eff_rainbowmood_header": "Ánimo Arcoiris",
+    "edt_eff_knightrider_header": "Coche Fantástico",
+    "edt_eff_lightclock_header": "Reloj",
+    "edt_eff_pacman_header": "Come-Cocos",
+    "edt_eff_moodblobs_header": "Ánimo Gotas",
+    "edt_eff_rainbowswirl_header": "Remolino Arcoiris",
+    "edt_eff_random_header": "Aleatorio",
+    "edt_eff_runningdots_header": "Puntos Corriendo",
+    "edt_eff_systemshutdown_header": "Apagado del Sistema",
+    "edt_eff_snake_header": "Serpiente",
+    "edt_eff_sparks_header": "Chispas",
+    "edt_eff_traces_header": "Rastros de Color",
+    "edt_eff_x-mas_header": "Navidad",
+    "edt_eff_trails_header": "Caminos",
     "edt_eff_enum_all": "Todo",
     "edt_eff_enum_all-together": "Todo junto",
     "edt_eff_enum_list": "Lista LED",
-    "edt_eff_count_title": "Cuenta",
-    "edt_eff_color_title": "Color",
-    "edt_eff_colorrandom_title": "Color aleatório",
-    "edt_eff_colorone_title": "Color uno",
-    "edt_eff_colortwo_title": "Color dos",
-    "edt_eff_colorcount_title": "Longitud de color",
-    "edt_eff_rotationtime_title": "Tiempo de rotación",
-    "edt_eff_sleeptime_title": "Hora de dormir",
-    "edt_eff_reversedirection_title": "Dirección inversa",
-    "edt_eff_colorstart_title": "Color de inicio",
-    "edt_eff_colorend_title": "Color final",
-    "edt_eff_colorshift_title": "Cambio de Color",
-    "edt_eff_whichleds_title": "Qué Leds",
-    "edt_eff_ledlist_title": "Lista Led",
-    "edt_eff_speed_title": "Velocidad",
-    "edt_eff_fadefactor_title": "Factor de fundido",
-    "edt_eff_showseconds_title": "Mostrar segundos",
-    "edt_eff_blobcount_title": "Contador de gotas",
-    "edt_eff_huechange_title": "Cambio de color",
-    "edt_eff_basecolorchange_title": "Cambio de color base",
-    "edt_eff_basecolorchangerate_title": "Proporción de cambio de BC",
-    "edt_eff_basecolorrangeleft_title": "Gama BC izquierda",
-    "edt_eff_basecolorrangeright_title": "Gama BC derecha",
-    "edt_eff_brightness_title": "Brillo",
-    "edt_eff_centerx_title": "Centrar Eje-X",
-    "edt_eff_centery_title": "Centrar Eje-Y",
-    "edt_eff_saturation_title": "Saturación",
-    "edt_eff_colorevel_title": "Nivel de color",
-    "edt_eff_whitelevel_title": "Nivel de blanco",
-    "edt_eff_alarmcolor_title": "Color de alarma",
-    "edt_eff_postcolor_title": "Post color",
-    "edt_eff_enableshutdown_title": "Apagado real",
-    "edt_eff_length_title": "Longitud",
-    "edt_eff_frequency_title": "Frecuencia",
-    "edt_eff_min_len_title": "Longitud mínima",
-    "edt_eff_max_len_title": "Longitud máxima",
-    "edt_eff_height_title": "Altura",
-    "edt_eff_offset_title": "Compensación",
-    "edt_eff_colorHour_title": "Color de hora",
-    "edt_eff_colorMinute_title": "Color de minuto",
-    "edt_eff_colorSecond_title": "Color de segundo",
-    "edt_eff_hourMargin_title": "Hora de margen",
-    "edt_eff_minuteMargin_title": "Minuto de margen",
-    "edt_eff_secondMargin_title": "Segundo de margen",
-    "edt_eff_margin_title": "Margen",
-    "edt_eff_colorMarker_title": "Marcador de color",
+    "edt_eff_count": "Cuenta",
+    "edt_eff_color": "Color",
+    "edt_eff_colorrandom": "Color aleatório",
+    "edt_eff_colorone": "Color uno",
+    "edt_eff_colortwo": "Color dos",
+    "edt_eff_colorcount": "Longitud de color",
+    "edt_eff_rotationtime": "Tiempo de rotación",
+    "edt_eff_sleeptime": "Hora de dormir",
+    "edt_eff_reversedirection": "Dirección inversa",
+    "edt_eff_colorstart": "Color de inicio",
+    "edt_eff_colorend": "Color final",
+    "edt_eff_colorshift": "Cambio de Color",
+    "edt_eff_whichleds": "Qué Leds",
+    "edt_eff_ledlist": "Lista Led",
+    "edt_eff_speed": "Velocidad",
+    "edt_eff_fadefactor": "Factor de fundido",
+    "edt_eff_showseconds": "Mostrar segundos",
+    "edt_eff_blobcount": "Contador de gotas",
+    "edt_eff_huechange": "Cambio de color",
+    "edt_eff_basecolorchange": "Cambio de color base",
+    "edt_eff_basecolorchangerate": "Proporción de cambio de BC",
+    "edt_eff_basecolorrangeleft": "Gama BC izquierda",
+    "edt_eff_basecolorrangeright": "Gama BC derecha",
+    "edt_eff_brightness": "Brillo",
+    "edt_eff_centerx": "Centrar Eje-X",
+    "edt_eff_centery": "Centrar Eje-Y",
+    "edt_eff_saturation": "Saturación",
+    "edt_eff_colorevel": "Nivel de color",
+    "edt_eff_whitelevel": "Nivel de blanco",
+    "edt_eff_alarmcolor": "Color de alarma",
+    "edt_eff_postcolor": "Post color",
+    "edt_eff_enableshutdown": "Apagado real",
+    "edt_eff_length": "Longitud",
+    "edt_eff_frequency": "Frecuencia",
+    "edt_eff_min_len": "Longitud mínima",
+    "edt_eff_max_len": "Longitud máxima",
+    "edt_eff_height": "Altura",
+    "edt_eff_offset": "Compensación",
+    "edt_eff_colorHour": "Color de hora",
+    "edt_eff_colorMinute": "Color de minuto",
+    "edt_eff_colorSecond": "Color de segundo",
+    "edt_eff_hourMargin": "Hora de margen",
+    "edt_eff_minuteMargin": "Minuto de margen",
+    "edt_eff_secondMargin": "Segundo de margen",
+    "edt_eff_margin": "Margen",
+    "edt_eff_colorMarker": "Marcador de color",
     "edt_append_ns": "ns",
     "edt_append_ms": "ms",
     "edt_append_s": "s",
@@ -714,6 +711,8 @@
     "wiz_hue_searchb": "Buscando el puente...",
     "wiz_hue_blinkblue": "Permite a ID $1 encender el azul",
     "wiz_hue_ident": "Identificar",
-    "edt_eff_repeatcount_title": "Repetir cuenta",
-    "edt_eff_maintain_end_color_title": "Mantener color de fin"
+    "edt_eff_repeatcount": "Repetir cuenta",
+    "edt_eff_maintain_end_color": "Mantener color de fin",
+    "edt_dev_spec_ledType": "Tipo de LED",
+    "edt_dev_spec_dmaNumber": "Canal DMA"
 }
